--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.3",
     "@mui/material": "^6.4.2",
+    "@mui/x-date-pickers": "^7.25.0",
     "@react-jvectormap/core": "^1.0.4",
     "@types/react-color": "^3.0.13",
+    "date-fns": "^4.1.0",
     "leaflet": "^1.9.4",
     "next": "15.1.6",
     "react": "^19.0.0",
