--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@react-jvectormap/core": "^1.0.4",
     "@types/react-color": "^3.0.13",
     "date-fns": "^4.1.0",
+    "i18next": "^24.2.2",
+    "i18next-browser-languagedetector": "^8.0.2",
     "leaflet": "^1.9.4",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-color": "^2.19.3",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.0",
     "react-leaflet": "^4.2.1",
     "react-select": "^5.10.0"
   },
